# machine-readable-checker

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: test.yml
src/machine_readable_checker/: __init__.py  api.py  checker.py  cli.py
src/machine_readable_checker/static/: app.js  index.html  style.css
tests/: test_api.py  test_checker.py
